--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:ital,wght@0,400;1,400;1,500&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+
+
+
+body {
+  font-family: 'Lato', sans-serif;
+  background-color: white, #f7f7f7;
+  /* display: flex;
+  height: 100%; */
+
+  margin: 0;
+  padding: 0;
+}
+
+
+.App-nav{
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+
+.main-container{
+  font-family: 'Playfair Display', serif; 
+  /* background-image: url("bg\ -\ Copy.png") ; */
+  display: flex;
+  height: 100%;
+width: 100%;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  
+
+}
+
+
+
+h1, h2, h3, h4, h5, h6, p{
+  letter-spacing: 1px;
   text-align: center;
 }
+/* .container { 
+   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 50vh;
+  align-items: center;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* FILE UPLOAD */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.dropzone {
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+  position: absolute;
+
+
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  justify-content: center; 
+  align-items: center; 
+  border: 5px dashed rgb(117, 112, 112);
+  border-radius: 50px;
+  padding: 2rem;
+  background-color: rgba(13, 12, 12, 0.7);
+  opacity:0.9;
+  color: rgb(117, 151, 112);
+}
+button {
+  border-radius: 10px;
+  border: none;
+  font-family: 'Playfair Display', serif; 
+  font-weight: bold;
+  
+}
+.active {
+  background-color: #5f5959;
+  color: #34d44f;
+}
+
+button {
+  padding: 1rem;
+  margin: 1rem;
+  font-size: medium;
+  background-color: rgb(44, 221, 112);
+}
+
+
+.list-item {
+  display: flex;
+  padding: 0;
+  margin: 8px 0;
+  min-width: 300px;
+  font-size: 22px;
+  background-color: #d4d2d2;
+  cursor: grab;
+  border-radius: 10px;
+}
+
+.list-item > h3 {
+  padding: 10px;
+  margin: 0;
+}
+
+.list-item > span {
+  margin-right: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  border-right: 2px solid white;
+  padding: 10px;
+  padding-right: 16px;
+}
+
+.next-position {
+  border: 2px solid #34d44f;
+  opacity: 0.2;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+video{
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+#overlay {
+  position: absolute;
+ 
+  width: 100%;
+  height: 100vh;
+background-color: rgba(0, 0,0,0.8);
+  
+}
+
+
+
+
+.welcome-line{
+  color: #34d44f;
+  display: inline;  
+  background-color:white;
+  opacity: 0.5;
+}
+
+
+.image-container {
+ 
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-container img{
+  width: 400px;
+  height: 300px;;
 }
